fixed font and alignment

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ button>span {
 
 body{
 background-color: purple;
+font-family: 'Freckle Face', cursive;
+text-align: center;
 
 }
 .btn{
@@ -25,6 +27,8 @@ background-position: center;
 background-size: cover;
 width: 100%;
 height: 150px;
+margin: 1px 5px 1px 1px;
+padding: 30px 0px 0px 0px;
 
 }
 .digits{
@@ -39,15 +43,24 @@ height: 150px;
     background-position: center;
     background-size: cover;
     margin: 1px 10px 1px 10px;
+
     
    
+}
+
+#ariaHeaderText{
+    text-align: center;
+    margin: 0px 0px 0px 0px;
+    object-position: 
+
+
 }
 .text-center{
 
 color: white;
-font-family: 'Freckle Face', cursive;
+text-align: center;
 font-size: 60pt;
-margin-bottom: 30px;
+margin-bottom: 120px;
 
 
 }
@@ -206,6 +219,12 @@ width: 100%;
     .btn{
     
         width: 110px;
+    }
+
+    .container1{
+    
+        background-image: url();
+        background-color: blueviolet;
     }
     
     }
